--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ main {
 .headprops {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .mainbody {
@@ -31,6 +31,7 @@ h4 {
 }
 
 h3 {
+  text-align: center;
   font-family: "work", sans-serif;
   text-transform: capitalize;
   margin-top: 6rem;
@@ -44,13 +45,16 @@ h1 {
   margin-top: 4rem;
 }
 p {
+    color: black;
   font-family: Raleway;
   font-weight: normal;
   font-size: 1.2rem;
   line-height: 36px;
 }
 .last-p {
-  margin-top: -0.4rem;
+  margin-top: -0.2rem;
+  font-size: 1rem;
+  font-weight: 600;
 }
 span {
   font-size: 1.5rem;
@@ -65,4 +69,11 @@ img {
 }
 a {
   color: gray;
+}
+
+.foots {
+  text-align: center;
+}
+.mid-body {
+  text-align: center;
 }
