--- a/styles.css
+++ b/styles.css
@@ -6,33 +6,38 @@ body {
   height: 100%;
 }
 main {
-  background-color: rgb(6, 168, 152);
+  background: #00aeff;
+  height: 50rem;
+  margin-top: 3rem;
+  box-shadow: 0.1rem 0.1rem 0.7rem rgb(68, 68, 68);
 }
 
-span {   
+span {
   font-size: 1.5rem;
   font-weight: 500;
-  font-family: 'work san', sans-serif;
+  font-family: "work san", sans-serif;
 }
 .headprops {
   display: flex;
+  width: 100%;
+  flex-direction: row;
   justify-content: space-between;
-  /* align-items: center; */
 }
 
 .mainbody {
-  background-color: white;
+  background-image: url(/Background.png);
   height: 50rem;
-  width: 60rem;
+  width: 65rem;
   margin-left: 2rem;
   top: 0px;
 }
 .solo-body {
   margin-top: 0px;
-  padding: 5rem;
+  padding: 5rem 3rem 3rem 5rem;
+  box-shadow: 2rem;
 }
 h4 {
-  color: turquoise;
+  color: #00aeff;
   font-size: 1.5rem;
 }
 
@@ -51,7 +56,7 @@ h1 {
   margin-top: 2.5rem;
 }
 p {
-    color: black;
+  color: black;
   font-family: Raleway;
   font-weight: normal;
   font-size: 1rem;
@@ -70,14 +75,32 @@ img {
   height: 6rem;
 }
 a {
-  color: gray;
+  color: rgb(156, 156, 156);
   text-decoration: none;
-  justify-content: end;
 }
-/* 
+
 .foots {
-  text-align: center;
+  margin-top: 4rem;
 }
-.mid-body {
-  text-align: center; */
-/* } */
+
+@media only screen and (max-width: 768px) {
+  main {
+    height: 48rem;
+    margin: 1.3rem;
+  }
+  .mainbody {
+    width: 30rem;
+    height: 48rem;
+  }
+  .solo-body {
+    padding: 2.5rem 1.5rem 1.5rem 2.5rem;
+  }
+  h1 {
+    font-size: 3rem;
+    height: 2rem;
+    margin-bottom: 4rem;
+  }
+  h3 {
+    margin-top: 5rem;
+  }
+}
